style(11-01): big-bang google-java-format via Spotless
Apply google-java-format to all 77 Java source files.
This is a one-time mass reformat; add commit SHA to
.git-blame-ignore-revs so git blame skips it.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>